refactor(EID-1762): converted API classes to records